tests/scope/bad/scope.catala_en
## Article

```catala
declaration scope A:
  output a content integer
  output b content integer
  internal c content boolean

scope A:
  definition c equals false
  definition a under condition c consequence equals 42
  definition a under condition not c consequence equals 0
  definition b under condition not c consequence equals 1337
  definition b under condition not c consequence equals 0
```

Note: ideally this could use test-scope but some positions are lost during translation to lcalc

```catala-test-inline
$ catala interpret -s A
[ERROR] Error during evaluation: two or more concurring valid computations.

┌─⯈ tests/scope/bad/scope.catala_en:13.57-13.61:
└──┐
13 │   definition b under condition not c consequence equals 1337
   │                                                         ‾‾‾‾
   └─ Article

┌─⯈ tests/scope/bad/scope.catala_en:14.57-14.58:
└──┐
14 │   definition b under condition not c consequence equals 0
   │                                                         ‾
   └─ Article
#return code 123#
```
